[FIX] mass_mailing: ensure no overflow of empty editor message
The empty editor message was overflowing its container when in a modal,
so a part of it was hidden and there was a scrollbar. This fixes it by
setting its width to the available space.

task-2742664

X-original-commit: 0bbe0a6e108591146d1d8cfb252b31f24fbf8ca5

--- a/addons/mass_mailing/static/src/scss/mass_mailing.ui.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.ui.scss
@@ -282,6 +282,9 @@ body.editor_enable.o_basic_theme.o_in_iframe {
         color: #999999;
         margin: 5px;
         height: auto;
+        width: -moz-available;          /* WebKit-based browsers will ignore this. */
+        width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+        width: stretch;
 
         &:before {
             content: attr(data-editor-message);
